Produce sql.Types -> JdbcType mapping directly from JdbcType constants, instead of using a redundant (and more difficult to maintain) side switch statement.
Eliminate a few other warnings in JdbcType (e.g., deprecated parsing methods).